--upd: new background viewcontroller, screen freeze fixed

--- a/Project/Storybord/Base.lproj/Main.storyboard
+++ b/Project/Storybord/Base.lproj/Main.storyboard
@@ -141,7 +141,7 @@
         <!--Main-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="BackgroundViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MainViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -185,9 +185,6 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Main" id="qEi-dE-zwh"/>
-                    <connections>
-                        <outlet property="alphabelButtom" destination="h8A-2Z-XrN" id="Th8-iX-uwk"/>
-                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
