--- a/Project/Storybord/Base.lproj/Main.storyboard
+++ b/Project/Storybord/Base.lproj/Main.storyboard
@@ -132,7 +132,7 @@
                         </textAttributes>
                     </navigationBar>
                     <connections>
-                        <segue destination="wEH-dt-b2O" kind="relationship" relationship="rootViewController" id="z8d-G6-Lb0"/>
+                        <segue destination="wEH-dt-b2O" kind="relationship" relationship="rootViewController" id="veg-uo-CLm"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ulz-pN-cmg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -322,7 +322,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="yzq-Gg-SlW"/>
-                        <segue destination="r6Z-5f-n6B" kind="relationship" relationship="viewControllers" id="AqA-KY-Z9M"/>
+                        <segue destination="oea-at-pm8" kind="relationship" relationship="viewControllers" id="oqf-2Y-pct"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BuT-MK-o3a" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -330,72 +330,83 @@
             <point key="canvasLocation" x="-730" y="801"/>
         </scene>
         <!--Поиск-->
-        <scene sceneID="c2m-uP-m6N">
+        <scene sceneID="ZVN-Oz-iQG">
             <objects>
-                <tableViewController id="r6Z-5f-n6B" customClass="SearchTableViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="qBb-Kl-dYF">
+                <viewController id="oea-at-pm8" customClass="SearchViewController" customModule="Project" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="6ad-FJ-5v1">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="HYr-in-vXT" customClass="SearchTableViewCell" customModule="Project" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="28" width="414" height="46"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HYr-in-vXT" id="eum-34-fPK">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="46"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                    <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="漢字" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qd1-oM-uD1">
-                                            <rect key="frame" x="9" y="13" width="32.666666666666664" height="20"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Кандзи, название японских иероглифов" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PYO-Pk-Wzy">
-                                            <rect key="frame" x="49" y="13" width="321.33333333333331" height="20"/>
-                                            <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="かんじ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zjb-lJ-pJN">
-                                            <rect key="frame" x="9" y="6" width="32.666666666666664" height="10"/>
-                                            <fontDescription key="fontDescription" type="system" pointSize="8"/>
-                                            <nil key="textColor"/>
-                                            <nil key="highlightedColor"/>
-                                        </label>
-                                    </subviews>
-                                    <constraints>
-                                        <constraint firstItem="PYO-Pk-Wzy" firstAttribute="leading" secondItem="qd1-oM-uD1" secondAttribute="trailing" constant="7.3333333333333357" id="2V6-Dy-9zM"/>
-                                        <constraint firstItem="qd1-oM-uD1" firstAttribute="top" secondItem="eum-34-fPK" secondAttribute="topMargin" constant="2" id="6ut-RM-RzY"/>
-                                        <constraint firstItem="zjb-lJ-pJN" firstAttribute="leading" secondItem="qd1-oM-uD1" secondAttribute="leading" id="8lp-sW-l3o"/>
-                                        <constraint firstAttribute="bottomMargin" secondItem="zjb-lJ-pJN" secondAttribute="bottom" constant="19.000001271565758" id="BC9-c5-S53"/>
-                                        <constraint firstItem="zjb-lJ-pJN" firstAttribute="trailing" secondItem="qd1-oM-uD1" secondAttribute="trailing" id="QZD-gE-2cl"/>
-                                        <constraint firstAttribute="trailingMargin" secondItem="PYO-Pk-Wzy" secondAttribute="trailing" constant="23.666666666666629" id="bCL-XD-RGw"/>
-                                        <constraint firstItem="qd1-oM-uD1" firstAttribute="firstBaseline" secondItem="PYO-Pk-Wzy" secondAttribute="firstBaseline" id="edK-zc-iJu"/>
-                                        <constraint firstItem="qd1-oM-uD1" firstAttribute="centerY" secondItem="eum-34-fPK" secondAttribute="centerY" id="hhP-u1-RrW"/>
-                                        <constraint firstItem="qd1-oM-uD1" firstAttribute="centerY" secondItem="PYO-Pk-Wzy" secondAttribute="centerY" id="p15-zp-dLB"/>
-                                        <constraint firstItem="zjb-lJ-pJN" firstAttribute="top" secondItem="eum-34-fPK" secondAttribute="topMargin" constant="-5.0000000000000009" id="xe2-Ea-mEP"/>
-                                        <constraint firstItem="zjb-lJ-pJN" firstAttribute="leading" secondItem="eum-34-fPK" secondAttribute="leadingMargin" constant="-11" id="y9c-yt-Yct"/>
-                                    </constraints>
-                                </tableViewCellContentView>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ORG-GL-zG6">
+                                <rect key="frame" x="0.0" y="44" width="414" height="643"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="7pr-Cv-VWx" customClass="SearchTableViewCell" customModule="Project" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="414" height="30.666666030883789"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="7pr-Cv-VWx" id="Euo-Hk-VD3">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="30.666666030883789"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="1000" verticalCompressionResistancePriority="1000" text="漢字" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="41e-Jb-vmJ">
+                                                    <rect key="frame" x="10" y="7.9999999999999982" width="32.666666666666664" height="19.333333333333329"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Кандзи, название японских иероглифов" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cSL-N0-EEw">
+                                                    <rect key="frame" x="47.666666666666657" y="5" width="351.33333333333337" height="20.666666666666668"/>
+                                                    <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="かんじ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4uW-wK-5Ow">
+                                                    <rect key="frame" x="10" y="0.66666666666666696" width="32.666666666666664" height="10"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="41e-Jb-vmJ" firstAttribute="top" relation="greaterThanOrEqual" secondItem="Euo-Hk-VD3" secondAttribute="top" constant="7.6666666666666661" id="JEM-sW-SLC"/>
+                                                <constraint firstAttribute="bottom" secondItem="cSL-N0-EEw" secondAttribute="bottom" constant="5" id="P0b-t2-MPe"/>
+                                                <constraint firstItem="4uW-wK-5Ow" firstAttribute="trailing" secondItem="41e-Jb-vmJ" secondAttribute="trailing" id="RDj-vc-v5b"/>
+                                                <constraint firstAttribute="trailing" secondItem="cSL-N0-EEw" secondAttribute="trailing" constant="15" id="X05-bJ-UaP"/>
+                                                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="41e-Jb-vmJ" secondAttribute="bottom" constant="2.9999993642171248" id="X5U-5b-FdN"/>
+                                                <constraint firstItem="cSL-N0-EEw" firstAttribute="leading" secondItem="41e-Jb-vmJ" secondAttribute="trailing" constant="5" id="Xxv-op-RYB"/>
+                                                <constraint firstItem="cSL-N0-EEw" firstAttribute="top" secondItem="Euo-Hk-VD3" secondAttribute="top" constant="5" id="bNr-F2-FFo"/>
+                                                <constraint firstItem="41e-Jb-vmJ" firstAttribute="centerY" secondItem="cSL-N0-EEw" secondAttribute="centerY" constant="2.1666666666667016" id="bQy-a3-6cb"/>
+                                                <constraint firstItem="41e-Jb-vmJ" firstAttribute="top" secondItem="4uW-wK-5Ow" secondAttribute="bottom" constant="-2.6666666666666288" id="gba-n2-tJn"/>
+                                                <constraint firstItem="4uW-wK-5Ow" firstAttribute="leading" secondItem="41e-Jb-vmJ" secondAttribute="leading" id="jsr-Jh-pNk"/>
+                                                <constraint firstItem="41e-Jb-vmJ" firstAttribute="leading" secondItem="Euo-Hk-VD3" secondAttribute="leading" constant="10" id="qhg-Yd-iII"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="kanjiBody" destination="41e-Jb-vmJ" id="Xj6-dB-mOg"/>
+                                            <outlet property="kanjiReading" destination="4uW-wK-5Ow" id="8Mo-72-tva"/>
+                                            <outlet property="kanjiTranslate" destination="cSL-N0-EEw" id="hLU-rB-pAf"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
-                                    <outlet property="kanjiBody" destination="qd1-oM-uD1" id="YmG-0g-mQ1"/>
-                                    <outlet property="kanjiReading" destination="zjb-lJ-pJN" id="XUD-2d-kZc"/>
-                                    <outlet property="kanjiTranslate" destination="PYO-Pk-Wzy" id="Si3-5I-0Ka"/>
+                                    <outlet property="dataSource" destination="oea-at-pm8" id="VeF-RU-Lit"/>
+                                    <outlet property="delegate" destination="oea-at-pm8" id="qUl-hk-kFk"/>
                                 </connections>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="r6Z-5f-n6B" id="txW-Bp-AT4"/>
-                            <outlet property="delegate" destination="r6Z-5f-n6B" id="bUW-R9-wjU"/>
-                        </connections>
-                    </tableView>
-                    <tabBarItem key="tabBarItem" title="Поиск" image="magnifyingglass" catalog="system" id="skq-Xg-6XC"/>
-                    <navigationItem key="navigationItem" id="AhO-Ba-SZX"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Dsp-WJ-Czg" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                            </tableView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="EdY-Kz-6Sd"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Поиск" image="magnifyingglass" catalog="system" id="Dh8-1q-Ftz"/>
+                    <navigationItem key="navigationItem" id="eTf-M4-CSz"/>
+                    <connections>
+                        <outlet property="tableView" destination="ORG-GL-zG6" id="pSk-nO-6Lh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aHl-XI-9f3" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="130" y="801"/>
+            <point key="canvasLocation" x="128.98550724637681" y="800.54347826086962"/>
         </scene>
         <!--Detail Kana View Controller-->
         <scene sceneID="v3z-yE-6rF">
@@ -449,7 +460,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="かんじ" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRy-S7-vXX">
-                                                    <rect key="frame" x="10" y="1" width="32.666666666666664" height="9.6666666666666661"/>
+                                                    <rect key="frame" x="10" y="0.66666666666666696" width="32.666666666666664" height="10"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="8"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
